--- a/lion.conf
+++ b/lion.conf
@@ -21,11 +21,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name lionhk.lioncloud.world;
+        server_name lionhk.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/lion.crt; 
-        ssl_certificate_key /usr/local/soga/privatelion.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                        
         ssl_session_timeout 10m;
@@ -40,11 +40,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name lionsg.lioncloud.world;
+        server_name lionsg.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/lion.crt; 
-        ssl_certificate_key /usr/local/soga/privatelion.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                        
         ssl_session_timeout 10m;
@@ -59,11 +59,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name lionjp.lioncloud.world;
+        server_name lionjp.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/lion.crt; 
-        ssl_certificate_key /usr/local/soga/privatelion.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                        
         ssl_session_timeout 10m;
@@ -78,11 +78,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name lionuk.lioncloud.world;
+        server_name lionuk.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/lion.crt; 
-        ssl_certificate_key /usr/local/soga/privatelion.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                        
         ssl_session_timeout 10m;
@@ -97,11 +97,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name lionus.lioncloud.world;
+        server_name lionus.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/lion.crt; 
-        ssl_certificate_key /usr/local/soga/privatelion.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                        
         ssl_session_timeout 10m;
