--- a/miaosu.conf
+++ b/miaosu.conf
@@ -27,7 +27,7 @@
     }
      upstream miaosutw {
         hash $remote_addr;
-        server hinet1.camdvr.org:10091 max_fails=3 fail_timeout=30s;
+        server 129.148.27.124:10091 max_fails=3 fail_timeout=30s;
     }
      upstream miaosuin {
         hash $remote_addr;
