--- a/miaosu.conf
+++ b/miaosu.conf
@@ -1,6 +1,6 @@
     upstream miaosuhk {
     	hash $remote_addr;
-    	server 13.112.65.54:10091 max_fails=3 fail_timeout=30s;
+    	server az1.xiaolioncloud.com:10091 max_fails=3 fail_timeout=30s;
         server 3.113.7.217:10091 max_fails=3 fail_timeout=30s;
     }
     upstream miaosusg {
