--- a/996cloud.conf
+++ b/996cloud.conf
@@ -1,42 +1,42 @@
     upstream 996hk {
-    	hash $remote_addr;
+    	hash $remote_addr consistent;
     	server 139.162.103.226:15001 max_fails=3 fail_timeout=30s;
     }
     upstream 996sg {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 170.187.231.229:15001 max_fails=3 fail_timeout=30s;
     }
     upstream 996jp {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 172.105.201.119:15001 max_fails=3 fail_timeout=30s;
         server 139.162.89.31:15001 max_fails=3 fail_timeout=30s;
     }
     upstream 996uk {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 143.47.249.213:15001 max_fails=3 fail_timeout=30s;
     }
      upstream 996us {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 69.164.194.82:15001 max_fails=3 fail_timeout=30s;
     }
      upstream 996de {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 138.2.133.156:15001 max_fails=3 fail_timeout=30s;
     }
      upstream 996tw {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server hinet1.camdvr.org:15001 max_fails=3 fail_timeout=30s;
     }
      upstream 996in {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 172.105.34.163:15001 max_fails=3 fail_timeout=30s;
     }
      upstream 996kr {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 150.230.254.120:15001 max_fails=3 fail_timeout=30s;
     }
      upstream 996ca {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 132.145.109.63:15001 max_fails=3 fail_timeout=30s;
     }
     server {
