--- a/lion.conf
+++ b/lion.conf
@@ -1,22 +1,22 @@
     upstream lionhk {
-    	hash $remote_addr;
+    	hash $remote_addr consistent;
     	server 103.135.102.186:25000 max_fails=3 fail_timeout=30s;
         server 139.162.72.177:25001 max_fails=3 fail_timeout=30s;
     }
     upstream lionsg {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 172.104.44.207:25002 max_fails=3 fail_timeout=30s;
     }
     upstream lionjp {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 139.162.72.177:25001 max_fails=3 fail_timeout=30s;
     }
     upstream lionuk {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 143.47.249.213:25004 max_fails=3 fail_timeout=30s;
     }
      upstream lionus {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 45.83.25.137:25003 max_fails=3 fail_timeout=30s;
     }
     server {
