--- a/spt.conf
+++ b/spt.conf
@@ -1,57 +1,57 @@
   upstream sphk {
-    	hash $remote_addr;
+    	hash $remote_addr consistent;
         server 103.135.102.186:29000 max_fails=3 fail_timeout=30s;
     }
     upstream sptw {
-    	hash $remote_addr;
+    	hash $remote_addr consistent;
     	server hinet1.camdvr.org:29001 max_fails=3 fail_timeout=30s;
     }
     upstream spsg {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 172.104.44.207:29002 max_fails=3 fail_timeout=30s;
     }
     upstream spjp {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 139.162.72.177:29003 max_fails=3 fail_timeout=30s;
     }
     upstream spkr {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 150.230.254.120:29004 max_fails=3 fail_timeout=30s;
     }
     upstream spus {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 152.70.124.200:29005 max_fails=3 fail_timeout=30s;
     }
     upstream spuk {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 143.47.249.213:29006 max_fails=3 fail_timeout=30s;
     }
     upstream spde {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 138.2.133.156:29007 max_fails=3 fail_timeout=30s;
     }
     upstream spca {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 132.145.109.63:31008 max_fails=3 fail_timeout=30s;
     }
      upstream tikus {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 45.83.25.137:54321 max_fails=3 fail_timeout=30s;
     }
      upstream tikusny {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 192.227.225.229:54321 max_fails=3 fail_timeout=30s;
     }
      upstream tikusshs {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 23.95.214.36:54321 max_fails=3 fail_timeout=30s;
     }
     upstream tikuk {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 143.47.249.213:54321 max_fails=3 fail_timeout=30s;
     }
     upstream tikde {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 89.58.60.17:3389 max_fails=3 fail_timeout=30s;
     }
     server {
