--- a/ovocloud.conf
+++ b/ovocloud.conf
@@ -1,41 +1,41 @@
     upstream ovohk {
-    	hash $remote_addr;
+    	hash $remote_addr consistent;
     	server 103.135.102.178:12349 max_fails=3 fail_timeout=30s;
     }
     upstream ovosg {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 45.118.134.161:12349 max_fails=3 fail_timeout=30s;
     }
     upstream ovojp {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 139.162.103.226:12349 max_fails=3 fail_timeout=30s;
     }
     upstream ovouk {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 143.47.249.213:12349 max_fails=3 fail_timeout=30s;
     }
      upstream ovous {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 172.104.198.233:12349 max_fails=3 fail_timeout=30s;
     }
      upstream ovode {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 138.2.133.156:12349 max_fails=3 fail_timeout=30s;
     }
      upstream ovotw {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server hinet1.camdvr.org:12349 max_fails=3 fail_timeout=30s;
     }
      upstream ovoin {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 3.110.204.82:12349 max_fails=3 fail_timeout=30s;
     }
      upstream ovokr {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 3.37.30.10:12349 max_fails=3 fail_timeout=30s;
     }
      upstream ovoca {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 132.145.109.63:12349 max_fails=3 fail_timeout=30s;
     }
     server {
