--- a/miaosu.conf
+++ b/miaosu.conf
@@ -1,42 +1,42 @@
     upstream miaosuhk {
-    	hash $remote_addr;
+    	hash $remote_addr consistent;
     	server az1.xiaolioncloud.com:10091 max_fails=3 fail_timeout=30s;
         server 172.105.201.119:10091 max_fails=3 fail_timeout=30s;
     }
     upstream miaosusg {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 170.187.231.229:10091 max_fails=3 fail_timeout=30s;
     }
     upstream miaosujp {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 139.162.103.226:10091 max_fails=3 fail_timeout=30s;
     }
     upstream miaosuuk {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 143.47.249.213:10091 max_fails=3 fail_timeout=30s;
     }
      upstream miaosuus {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 18.218.254.204:10091 max_fails=3 fail_timeout=30s;
     }
      upstream miaosude {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 138.2.133.156:10091 max_fails=3 fail_timeout=30s;
     }
      upstream miaosutw {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 129.148.27.124:10091 max_fails=3 fail_timeout=30s;
     }
      upstream miaosuin {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 45.79.117.46:10091 max_fails=3 fail_timeout=30s;
     }
      upstream miaosukr {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 13.124.84.125:10091 max_fails=3 fail_timeout=30s;
     }
      upstream miaosuca {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 132.145.109.63:10091 max_fails=3 fail_timeout=30s;
     }
     server {
