--- a/douzi.conf
+++ b/douzi.conf
@@ -1,49 +1,49 @@
     upstream douzihk {
-      hash $remote_addr;
+      hash $remote_addr consistent;
       server 103.135.102.123:51888 max_fails=3 fail_timeout=30s;
     }
     upstream douzisg {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 13.229.93.114:51888 max_fails=3 fail_timeout=30s;
     }
     upstream douzijp {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 13.230.127.223:51888 max_fails=3 fail_timeout=30s;
     }
     upstream douziuk {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 143.47.249.213:51888 max_fails=3 fail_timeout=30s;
     }
      upstream douzius {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 18.236.104.33:51888 max_fails=3 fail_timeout=30s;
     }
      upstream douzitg {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 138.2.133.156:51888 max_fails=3 fail_timeout=30s;
     }
      upstream douzitw {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server hinet1.camdvr.org:51888 max_fails=3 fail_timeout=30s;
     }
      upstream douziin {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 3.110.204.82:51888 max_fails=3 fail_timeout=30s;
     }
      upstream douzikr {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 43.202.57.70:51888 max_fails=3 fail_timeout=30s;
     }
      upstream douzide {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 185.232.70.23:51888 max_fails=3 fail_timeout=30s;
     }
      upstream douziyn {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 103.183.112.212:51888 max_fails=3 fail_timeout=30s;
     }
      upstream douziels {
-        hash $remote_addr;
+        hash $remote_addr consistent;
         server 193.38.51.100:51888 max_fails=3 fail_timeout=30s;
     }
     server {
