--- a/spt.conf
+++ b/spt.conf
@@ -4,6 +4,7 @@
     }
     upstream sptw {
     	hash $remote_addr consistent;
+      dynamic_resolve fallback=stale fail_timeout=30s;
     	server hinet1.camdvr.org:29001 max_fails=3 fail_timeout=30s;
     }
     upstream spsg {
