--- a/dockerfile-2ddns
+++ b/dockerfile-2ddns
@@ -13,4 +13,4 @@ ADD . /root/ddns
 RUN pip install --no-cache-dir aliyun-python-sdk-core-v3 aliyun-python-sdk-alidns requests
 
 # 运行ddns.py当Docker启动时
-CMD python ddns.py --rr $rr
+CMD python -u ddns.py --rr $rr
