--- a/fscloud.conf
+++ b/fscloud.conf
@@ -1,40 +1,40 @@
-    upstream 996hk {
+    upstream fschk {
     	hash $remote_addr consistent;
     	server 139.162.66.166:15001 max_fails=3 fail_timeout=30s;
     }
-    upstream 996sg {
+    upstream fscsg {
         hash $remote_addr consistent;
         server 139.144.117.130:15001 max_fails=3 fail_timeout=30s;
     }
-    upstream 996jp {
+    upstream fscjp {
         hash $remote_addr consistent;
         server 172.105.238.212:15001 max_fails=3 fail_timeout=30s;
     }
-    upstream 996uk {
+    upstream fscuk {
         hash $remote_addr consistent;
         server 143.47.249.213:15001 max_fails=3 fail_timeout=30s;
     }
-     upstream 996us {
+     upstream fscus {
         hash $remote_addr consistent;
         server 45.56.68.15:15001 max_fails=3 fail_timeout=30s;
     }
-     upstream 996de {
+     upstream fscde {
         hash $remote_addr consistent;
         server 138.2.133.156:15001 max_fails=3 fail_timeout=30s;
     }
-     upstream 996tw {
+     upstream fsctw {
         hash $remote_addr consistent;
         server hinet1.camdvr.org:15001 max_fails=3 fail_timeout=30s;
     }
-     upstream 996in {
+     upstream fscin {
         hash $remote_addr consistent;
         server 13.127.21.83:15001 max_fails=3 fail_timeout=30s;
     }
-     upstream 996kr {
+     upstream fsckr {
         hash $remote_addr consistent;
         server 150.230.254.120:15001 max_fails=3 fail_timeout=30s;
     }
-     upstream 996ca {
+     upstream fscca {
         hash $remote_addr consistent;
         server 132.145.109.63:15001 max_fails=3 fail_timeout=30s;
     }
@@ -43,8 +43,8 @@
         server_name fschk.fscloud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
-        ssl_certificate /usr/local/soga/996cloud.crt; 
-        ssl_certificate_key /usr/local/soga/private996.key; 
+        ssl_certificate /usr/local/soga/fsccloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatefsc.key; 
         ssl_session_cache   shared:SSL:10m;                                                          
         ssl_session_timeout 10m;
         proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
@@ -54,15 +54,15 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        996hk;
+        proxy_pass        fschk;
     }
     server {
         listen              443 ssl;                   
         server_name fscsg.fscloud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/996cloud.crt; 
-        ssl_certificate_key /usr/local/soga/private996.key; 
+        ssl_certificate /usr/local/soga/fsccloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatefsc.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                
         ssl_session_timeout 10m;
@@ -74,7 +74,7 @@
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
         
-        proxy_pass        996sg;
+        proxy_pass        fscsg;
 
     }
     server {
@@ -82,8 +82,8 @@
         server_name fscjp.fscloud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/996cloud.crt; 
-        ssl_certificate_key /usr/local/soga/private996.key; 
+        ssl_certificate /usr/local/soga/fsccloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatefsc.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                      
         ssl_session_timeout 10m;
@@ -94,7 +94,7 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        996jp;
+        proxy_pass        fscjp;
 
     }
     server {
@@ -102,8 +102,8 @@
         server_name fscuk.fscloud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/996cloud.crt; 
-        ssl_certificate_key /usr/local/soga/private996.key; 
+        ssl_certificate /usr/local/soga/fsccloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatefsc.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                
         ssl_session_timeout 10m;
@@ -114,15 +114,15 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        996uk;
+        proxy_pass        fscuk;
     }
     server {
         listen              443 ssl;                   
         server_name fscus.fscloud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
-        ssl_certificate /usr/local/soga/996cloud.crt; 
-        ssl_certificate_key /usr/local/soga/private996.key; 
+        ssl_certificate /usr/local/soga/fsccloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatefsc.key; 
         ssl_session_cache   shared:SSL:10m;            
                                            
         ssl_session_timeout 10m;
@@ -133,7 +133,7 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        996us;
+        proxy_pass        fscus;
 
     }
     server {
@@ -141,8 +141,8 @@
         server_name fscde.fscloud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
-        ssl_certificate /usr/local/soga/996cloud.crt; 
-        ssl_certificate_key /usr/local/soga/private996.key; 
+        ssl_certificate /usr/local/soga/fsccloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatefsc.key; 
         ssl_session_cache   shared:SSL:10m;            
                                           
         ssl_session_timeout 10m;
@@ -154,7 +154,7 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        996de;
+        proxy_pass        fscde;
 
     }
     server {
@@ -162,8 +162,8 @@
         server_name fscca.fscloud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
-        ssl_certificate /usr/local/soga/996cloud.crt; 
-        ssl_certificate_key /usr/local/soga/private996.key; 
+        ssl_certificate /usr/local/soga/fsccloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatefsc.key; 
         ssl_session_cache   shared:SSL:10m;            
                                               
         ssl_session_timeout 10m;
@@ -175,7 +175,7 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        996ca;
+        proxy_pass        fscca;
 
     }
     server {
@@ -183,8 +183,8 @@
         server_name fscin.fscloud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
-        ssl_certificate /usr/local/soga/996cloud.crt; 
-        ssl_certificate_key /usr/local/soga/private996.key; 
+        ssl_certificate /usr/local/soga/fsccloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatefsc.key; 
         ssl_session_cache   shared:SSL:10m;            
                                               
         ssl_session_timeout 10m;
@@ -196,7 +196,7 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        996in;
+        proxy_pass        fscin;
 
     }
     server {
@@ -204,8 +204,8 @@
         server_name fsctw.fscloud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
-        ssl_certificate /usr/local/soga/996cloud.crt; 
-        ssl_certificate_key /usr/local/soga/private996.key; 
+        ssl_certificate /usr/local/soga/fsccloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatefsc.key; 
         ssl_session_cache   shared:SSL:10m;            
                                            
         ssl_session_timeout 10m;
@@ -217,15 +217,15 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        996tw;
+        proxy_pass        fsctw;
     }
     server {
         listen              443 ssl;                   
         server_name fsckr.fscloud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
-        ssl_certificate /usr/local/soga/996cloud.crt; 
-        ssl_certificate_key /usr/local/soga/private996.key; 
+        ssl_certificate /usr/local/soga/fsccloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatefsc.key; 
         ssl_session_cache   shared:SSL:10m;                                                 
         ssl_session_timeout 10m;
         proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
@@ -236,6 +236,6 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        996kr;
+        proxy_pass        fsckr;
 
     }
