--- a/fscloud.conf
+++ b/fscloud.conf
@@ -1,51 +1,51 @@
-    upstream fschk {
+    upstream sppphk {
     	hash $remote_addr consistent;
     	server 172.104.67.174:15001 max_fails=3 fail_timeout=30s;
     	server 172.104.67.132:15001 max_fails=3 fail_timeout=30s;
     }
-    upstream fscsg {
+    upstream spppsg {
         hash $remote_addr consistent;
         server 139.162.21.123:15001 max_fails=3 fail_timeout=30s;
     }
-    upstream fscjp {
+    upstream spppjp {
         hash $remote_addr consistent;
         server 172.104.66.183:15001 max_fails=3 fail_timeout=30s;
     }
-    upstream fscuk {
+    upstream spppuk {
         hash $remote_addr consistent;
         server 143.47.249.213:15001 max_fails=3 fail_timeout=30s;
     }
-     upstream fscus {
+     upstream spppus {
         hash $remote_addr consistent;
         server 193.25.215.86:15001 max_fails=3 fail_timeout=30s;
     }
-     upstream fscde {
+     upstream spppde {
         hash $remote_addr consistent;
         server 138.2.133.156:15001 max_fails=3 fail_timeout=30s;
     }
-     upstream fsctw {
+     upstream sppptw {
         hash $remote_addr consistent;
         server hinet1.camdvr.org:15001 max_fails=3 fail_timeout=30s;
     }
-     upstream fscin {
+     upstream spppin {
         hash $remote_addr consistent;
         server 13.127.21.83:15001 max_fails=3 fail_timeout=30s;
     }
-     upstream fsckr {
+     upstream spppkr {
         hash $remote_addr consistent;
         server 150.230.254.120:15001 max_fails=3 fail_timeout=30s;
     }
-     upstream fscca {
+     upstream spppca {
         hash $remote_addr consistent;
         server 132.145.109.63:15001 max_fails=3 fail_timeout=30s;
     }
     server {
         listen              443 ssl;                   
-        server_name fschk.fscloud123456789.com;
+        server_name sppphk.sppploud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
-        ssl_certificate /usr/local/soga/fsccloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatefsc.key; 
+        ssl_certificate /usr/local/soga/spppcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesppp.key; 
         ssl_session_cache   shared:SSL:10m;                                                          
         ssl_session_timeout 10m;
         proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
@@ -55,15 +55,15 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        fschk;
+        proxy_pass        sppphk;
     }
     server {
         listen              443 ssl;                   
-        server_name fscsg.fscloud123456789.com;
+        server_name spppsg.sppploud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/fsccloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatefsc.key; 
+        ssl_certificate /usr/local/soga/spppcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesppp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                
         ssl_session_timeout 10m;
@@ -75,16 +75,16 @@
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
         
-        proxy_pass        fscsg;
+        proxy_pass        spppsg;
 
     }
     server {
         listen              443 ssl;                   
-        server_name fscjp.fscloud123456789.com;
+        server_name spppjp.sppploud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/fsccloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatefsc.key; 
+        ssl_certificate /usr/local/soga/spppcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesppp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                      
         ssl_session_timeout 10m;
@@ -95,16 +95,16 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        fscjp;
+        proxy_pass        spppjp;
 
     }
     server {
         listen              443 ssl;                   
-        server_name fscuk.fscloud123456789.com;
+        server_name spppuk.sppploud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/fsccloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatefsc.key; 
+        ssl_certificate /usr/local/soga/spppcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesppp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                
         ssl_session_timeout 10m;
@@ -115,15 +115,15 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        fscuk;
+        proxy_pass        spppuk;
     }
     server {
         listen              443 ssl;                   
-        server_name fscus.fscloud123456789.com;
+        server_name spppus.sppploud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
-        ssl_certificate /usr/local/soga/fsccloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatefsc.key; 
+        ssl_certificate /usr/local/soga/spppcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesppp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                            
         ssl_session_timeout 10m;
@@ -134,16 +134,16 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        fscus;
+        proxy_pass        spppus;
 
     }
     server {
         listen              443 ssl;                   
-        server_name fscde.fscloud123456789.com;
+        server_name spppde.sppploud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
-        ssl_certificate /usr/local/soga/fsccloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatefsc.key; 
+        ssl_certificate /usr/local/soga/spppcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesppp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                           
         ssl_session_timeout 10m;
@@ -155,16 +155,16 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        fscde;
+        proxy_pass        spppde;
 
     }
     server {
         listen              443 ssl;                   
-        server_name fscca.fscloud123456789.com;
+        server_name spppca.sppploud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
-        ssl_certificate /usr/local/soga/fsccloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatefsc.key; 
+        ssl_certificate /usr/local/soga/spppcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesppp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                               
         ssl_session_timeout 10m;
@@ -176,16 +176,16 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        fscca;
+        proxy_pass        spppca;
 
     }
     server {
         listen              443 ssl;                   
-        server_name fscin.fscloud123456789.com;
+        server_name spppin.sppploud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
-        ssl_certificate /usr/local/soga/fsccloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatefsc.key; 
+        ssl_certificate /usr/local/soga/spppcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesppp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                               
         ssl_session_timeout 10m;
@@ -197,16 +197,16 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        fscin;
+        proxy_pass        spppin;
 
     }
     server {
         listen              443 ssl;                   
-        server_name fsctw.fscloud123456789.com;
+        server_name sppptw.sppploud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
-        ssl_certificate /usr/local/soga/fsccloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatefsc.key; 
+        ssl_certificate /usr/local/soga/spppcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesppp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                            
         ssl_session_timeout 10m;
@@ -218,15 +218,15 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        fsctw;
+        proxy_pass        sppptw;
     }
     server {
         listen              443 ssl;                   
-        server_name fsckr.fscloud123456789.com;
+        server_name spppkr.sppploud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
-        ssl_certificate /usr/local/soga/fsccloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatefsc.key; 
+        ssl_certificate /usr/local/soga/spppcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesppp.key; 
         ssl_session_cache   shared:SSL:10m;                                                 
         ssl_session_timeout 10m;
         proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
@@ -237,6 +237,6 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        fsckr;
+        proxy_pass        spppkr;
 
     }
