--- a/fscloud.conf
+++ b/fscloud.conf
@@ -41,11 +41,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name sppphk.sppploud123456789.com;
+        server_name fschk.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
-        ssl_certificate /usr/local/soga/spppcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesppp.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;                                                          
         ssl_session_timeout 10m;
         proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
@@ -59,11 +59,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name spppsg.sppploud123456789.com;
+        server_name fscsg.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/spppcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesppp.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                
         ssl_session_timeout 10m;
@@ -80,11 +80,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name spppjp.sppploud123456789.com;
+        server_name fscjp.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/spppcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesppp.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                      
         ssl_session_timeout 10m;
@@ -100,11 +100,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name spppuk.sppploud123456789.com;
+        server_name fscuk.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/spppcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesppp.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                
         ssl_session_timeout 10m;
@@ -119,11 +119,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name spppus.sppploud123456789.com;
+        server_name fscus.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
-        ssl_certificate /usr/local/soga/spppcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesppp.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                            
         ssl_session_timeout 10m;
@@ -139,11 +139,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name spppde.sppploud123456789.com;
+        server_name fscde.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
-        ssl_certificate /usr/local/soga/spppcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesppp.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                           
         ssl_session_timeout 10m;
@@ -160,11 +160,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name spppca.sppploud123456789.com;
+        server_name fscca.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
-        ssl_certificate /usr/local/soga/spppcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesppp.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                               
         ssl_session_timeout 10m;
@@ -181,11 +181,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name spppin.sppploud123456789.com;
+        server_name fscin.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
-        ssl_certificate /usr/local/soga/spppcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesppp.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                               
         ssl_session_timeout 10m;
@@ -202,11 +202,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name sppptw.sppploud123456789.com;
+        server_name fsctw.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
-        ssl_certificate /usr/local/soga/spppcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesppp.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                            
         ssl_session_timeout 10m;
@@ -222,11 +222,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name spppkr.sppploud123456789.com;
+        server_name fsckr.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
-        ssl_certificate /usr/local/soga/spppcloud.crt; 
-        ssl_certificate_key /usr/local/soga/privatesppp.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;                                                 
         ssl_session_timeout 10m;
         proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
