--- a/996cloud.conf
+++ b/996cloud.conf
@@ -1,53 +1,48 @@
     upstream 996hk {
     	hash $remote_addr consistent;
-    	server 18.183.209.156:15001 max_fails=3 fail_timeout=30s;
-    	server 13.231.189.201:15001 max_fails=3 fail_timeout=30s;
+    	server 18.183.209.156:15002 max_fails=3 fail_timeout=30s;
+    	server 13.231.189.201:15002 max_fails=3 fail_timeout=30s;
     }
     upstream 996sg {
         hash $remote_addr consistent;
-        server 139.162.21.123:15001 max_fails=3 fail_timeout=30s;
+        server 139.162.21.123:15002 max_fails=3 fail_timeout=30s;
     }
     upstream 996jp {
         hash $remote_addr consistent;
-        server 172.104.66.183:15001 max_fails=3 fail_timeout=30s;
+        server 172.104.66.183:15002 max_fails=3 fail_timeout=30s;
     }
     upstream 996uk {
         hash $remote_addr consistent;
-        server 143.47.249.213:15001 max_fails=3 fail_timeout=30s;
+        server 143.47.249.213:15002 max_fails=3 fail_timeout=30s;
     }
      upstream 996us {
         hash $remote_addr consistent;
-        server 193.25.215.86:15001 max_fails=3 fail_timeout=30s;
+        server 193.25.215.86:15002 max_fails=3 fail_timeout=30s;
     }
      upstream 996de {
         hash $remote_addr consistent;
-        server 138.2.133.156:15001 max_fails=3 fail_timeout=30s;
+        server 138.2.133.156:15002 max_fails=3 fail_timeout=30s;
     }
      upstream 996tw {
         hash $remote_addr consistent;
-        server hinet1.camdvr.org:15001 max_fails=3 fail_timeout=30s;
+        server hinet1.camdvr.org:15002 max_fails=3 fail_timeout=30s;
     }
      upstream 996in {
         hash $remote_addr consistent;
-        server 13.127.21.83:15001 max_fails=3 fail_timeout=30s;
+        server 13.127.21.83:15002 max_fails=3 fail_timeout=30s;
     }
      upstream 996kr {
         hash $remote_addr consistent;
-        server 150.230.254.120:15001 max_fails=3 fail_timeout=30s;
+        server 150.230.254.120:15002 max_fails=3 fail_timeout=30s;
     }
      upstream 996ca {
         hash $remote_addr consistent;
-        server 132.145.109.63:15001 max_fails=3 fail_timeout=30s;
+        server 132.145.109.63:15002 max_fails=3 fail_timeout=30s;
     }
     server {
-        listen              443 ssl;                   
+        listen              19006;                   
         server_name fschk.fscloud12345678901.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
-        
-        ssl_certificate /usr/local/soga/996cloud.crt; 
-        ssl_certificate_key /usr/local/soga/private996.key; 
-        ssl_session_cache   shared:SSL:10m;                                                          
-        ssl_session_timeout 10m;
+
         proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
     	proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
         proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
@@ -58,15 +53,9 @@
         proxy_pass        996hk;
     }
     server {
-        listen              443 ssl;                   
+        listen              19006;                   
         server_name fscsg.fscloud12345678901.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/996cloud.crt; 
-        ssl_certificate_key /usr/local/soga/private996.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                               
-        ssl_session_timeout 10m;
         proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
     	proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
         proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
@@ -79,15 +68,9 @@
 
     }
     server {
-        listen              443 ssl;                   
+        listen              19006;                   
         server_name fscjp.fscloud12345678901.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/996cloud.crt; 
-        ssl_certificate_key /usr/local/soga/private996.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                     
-        ssl_session_timeout 10m;
         proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
         proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
         proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
@@ -99,15 +82,9 @@
 
     }
     server {
-        listen              443 ssl;                   
+        listen              19006;                   
         server_name fscuk.fscloud12345678901.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/996cloud.crt; 
-        ssl_certificate_key /usr/local/soga/private996.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                               
-        ssl_session_timeout 10m;
         proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
         proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
         proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
@@ -118,15 +95,9 @@
         proxy_pass        996uk;
     }
     server {
-        listen              443 ssl;                   
+        listen              19006;                   
         server_name fscus.fscloud12345678901.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
-        
-        ssl_certificate /usr/local/soga/996cloud.crt; 
-        ssl_certificate_key /usr/local/soga/private996.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                           
-        ssl_session_timeout 10m;
+
         proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
         proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
         proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
@@ -138,15 +109,9 @@
 
     }
     server {
-        listen              443 ssl;                   
+        listen              19006;                   
         server_name fscde.fscloud12345678901.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
-        
-        ssl_certificate /usr/local/soga/996cloud.crt; 
-        ssl_certificate_key /usr/local/soga/private996.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                          
-        ssl_session_timeout 10m;
+
         proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
         proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
 
@@ -159,15 +124,9 @@
 
     }
     server {
-        listen              443 ssl;                   
+        listen              19006;                   
         server_name fscca.fscloud12345678901.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
-        
-        ssl_certificate /usr/local/soga/996cloud.crt; 
-        ssl_certificate_key /usr/local/soga/private996.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                              
-        ssl_session_timeout 10m;
+
         proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
         proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
 
@@ -180,15 +139,9 @@
 
     }
     server {
-        listen              443 ssl;                   
+        listen              19006;                   
         server_name fscin.fscloud12345678901.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
-        
-        ssl_certificate /usr/local/soga/996cloud.crt; 
-        ssl_certificate_key /usr/local/soga/private996.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                              
-        ssl_session_timeout 10m;
+
         proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
         proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
 
@@ -201,15 +154,9 @@
 
     }
     server {
-        listen              443 ssl;                   
+        listen              19006;                   
         server_name fsctw.fscloud12345678901.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
-        
-        ssl_certificate /usr/local/soga/996cloud.crt; 
-        ssl_certificate_key /usr/local/soga/private996.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                           
-        ssl_session_timeout 10m;
+
         proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
         proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
 
@@ -221,14 +168,8 @@
         proxy_pass        996tw;
     }
     server {
-        listen              443 ssl;                   
+        listen             19006;                   
         server_name fsckr.fscloud12345678901.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
-        
-        ssl_certificate /usr/local/soga/996cloud.crt; 
-        ssl_certificate_key /usr/local/soga/private996.key; 
-        ssl_session_cache   shared:SSL:10m;                                                 
-        ssl_session_timeout 10m;
         proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
         proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
 
