--- a/996cloud.conf
+++ b/996cloud.conf
@@ -10,6 +10,8 @@
     upstream 996jp {
         hash $remote_addr consistent;
         server 172.104.66.183:15002 max_fails=3 fail_timeout=30s;
+        server 52.194.223.64:15002 max_fails=3 fail_timeout=30s;
+
     }
     upstream 996uk {
         hash $remote_addr consistent;
