--- a/miaosu.conf
+++ b/miaosu.conf
@@ -80,7 +80,7 @@
     }
     server {
         listen              443 ssl;                   
-        server_name spjp.1234567890spcloud.com;
+        server_name spjp1.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
         ssl_certificate /usr/local/soga/spcloud.crt; 
